# heater

./: CMakeLists.txt  Makefile  a.out  computations.cpp  example_thread.cpp  stdthread.cpp  thread.cpp  thread.h  utils.cpp
