project(thread)
file(GLOB Obj *.o)
add_library(compute utils.cpp)
target_include_directories(compute PUBLIC ./)
target_compile_options(compute PUBLIC -std=c++2a)
add_executable(thread thread.cpp)
target_include_directories(thread PUBLIC ./)
target_compile_options(thread PUBLIC -std=c++2a)
target_link_libraries(thread compute)
