project(thread)
file(GLOB Obj *.o)
if(CLANG__) 
	message(STATUS "using clang")
	set(CMAKE_CXX_COMPILER, /usr/lib/llvm/14/bin/clang++)
endif()

add_library(compute utils.cpp)
target_include_directories(compute PUBLIC ./)
target_compile_options(compute PUBLIC -std=c++2a)
if(EXEC)
	message(STATUS "compiling xbin")
	add_executable(thread stdthread.cpp)
	#target_include_directories(thread PUBLIC ./)
	target_compile_options(thread PUBLIC -std=c++2a)
	target_link_libraries(thread compute)
endif()
